<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>visualizer</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="opensource-ts@dlr.de">DLR-TS</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>adore_ros2_msgs</build_depend>
  <build_depend>adore_map_conversions</build_depend>
  <build_depend>adore_dynamics_conversions</build_depend>
  <build_depend>adore_math_conversions</build_depend>

  <build_depend>rclcpp</build_depend>
  <depend>rclcpp_components</depend>
  <depend>foxglove_msgs</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <depend>sensor_msgs</depend>
  <depend>nlohmann-json-dev</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
